samples/_failures_safe/1761618056_9c7373_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b6bdcea.c: In function ‘main’:
./samples/SAFE/__tmp_3b6bdcea.c:141: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3b6bdcea.c:140:5: error: expected declaration or statement at end of input
  140 |     if
      |     ^~
